@startuml
title <b>cubeadcs_gen2_sm
[*] --> Backoff
state Backoff
state EventMarkerAcquisition
state Idle
state Check
state EventDownload
state StateChange
state FDIR

Backoff --> EventMarkerAcquisition: <b>__periodic</b> [is_adcs_ready]\n
EventMarkerAcquisition --> Check: <b>event_marker_acquired</b> \n
Idle --> Check: <b>__periodic</b> [is_time_to_check_expired]\n
Idle --> EventDownload: <b>__periodic</b> [is_time_to_event_download_expired]\n
Idle --> StateChange: <b>request_a_state_change</b> [is_state_change_valid]\n
Check --> FDIR: <b>request_fdir</b> \n
Check --> Idle: <b>check_completed</b> \n
EventDownload --> Idle: <b>event_download_completed</b> \n
EventDownload --> FDIR: <b>request_fdir</b> \n
StateChange --> FDIR: <b>request_fdir</b> \n
StateChange --> Idle: <b>state_change_completed</b> \n
FDIR --> Idle: <b>fdir_completed</b> \n/ notify_users
@enduml
